// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<IconInfo /> DOM element add "id" attribute to DOM element 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    id="hasId"
    viewBox="0 0 256 256"
    width="1em"
  >
     
    <path
      d="M150.3 86.6v107.8c0 9.6 1.1 15.7 3.3 18.4 2.2 2.7 6.6 4.2 13.1 4.6v5.2H93.3v-5.2c6-.2 10.5-1.9 13.4-5.2 1.9-2.2 2.9-8.1 2.9-17.8V115c0-9.6-1.1-15.7-3.3-18.4-2.2-2.7-6.5-4.2-12.9-4.6v-5.4h56.9zm-20.4-65.9c6.3 0 11.6 2.2 16 6.6 4.4 4.4 6.5 9.7 6.5 15.9 0 6.2-2.2 11.5-6.6 15.9-4.4 4.4-9.7 6.5-15.9 6.5-6.2 0-11.5-2.2-15.9-6.5-4.4-4.4-6.5-9.7-6.5-15.9 0-6.2 2.2-11.5 6.5-15.9 4.4-4.4 9.7-6.6 15.9-6.6z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconInfo /> DOM element add "id" attribute to DOM element 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}"`;

exports[`<IconInfo /> DOM element add "onClick" attribute to DOM element 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    id={[Function]}
    viewBox="0 0 256 256"
    width="1em"
  >
     
    <path
      d="M150.3 86.6v107.8c0 9.6 1.1 15.7 3.3 18.4 2.2 2.7 6.6 4.2 13.1 4.6v5.2H93.3v-5.2c6-.2 10.5-1.9 13.4-5.2 1.9-2.2 2.9-8.1 2.9-17.8V115c0-9.6-1.1-15.7-3.3-18.4-2.2-2.7-6.5-4.2-12.9-4.6v-5.4h56.9zm-20.4-65.9c6.3 0 11.6 2.2 16 6.6 4.4 4.4 6.5 9.7 6.5 15.9 0 6.2-2.2 11.5-6.6 15.9-4.4 4.4-9.7 6.5-15.9 6.5-6.2 0-11.5-2.2-15.9-6.5-4.4-4.4-6.5-9.7-6.5-15.9 0-6.2 2.2-11.5 6.5-15.9 4.4-4.4 9.7-6.6 15.9-6.6z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconInfo /> DOM element add "onClick" attribute to DOM element 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}"`;

exports[`<IconInfo /> DOM element pass attributes defined in the "attrs" prop to the DOM element 1`] = `
<div>
  <svg
    aria-hidden={true}
    className="htz-a htz-b htz-c"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
     
    <path
      d="M150.3 86.6v107.8c0 9.6 1.1 15.7 3.3 18.4 2.2 2.7 6.6 4.2 13.1 4.6v5.2H93.3v-5.2c6-.2 10.5-1.9 13.4-5.2 1.9-2.2 2.9-8.1 2.9-17.8V115c0-9.6-1.1-15.7-3.3-18.4-2.2-2.7-6.5-4.2-12.9-4.6v-5.4h56.9zm-20.4-65.9c6.3 0 11.6 2.2 16 6.6 4.4 4.4 6.5 9.7 6.5 15.9 0 6.2-2.2 11.5-6.6 15.9-4.4 4.4-9.7 6.5-15.9 6.5-6.2 0-11.5-2.2-15.9-6.5-4.4-4.4-6.5-9.7-6.5-15.9 0-6.2 2.2-11.5 6.5-15.9 4.4-4.4 9.7-6.6 15.9-6.6z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconInfo /> DOM element pass attributes defined in the "attrs" prop to the DOM element 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}"`;

exports[`<IconInfo /> DOM element render correctly when no props are passed 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
     
    <path
      d="M150.3 86.6v107.8c0 9.6 1.1 15.7 3.3 18.4 2.2 2.7 6.6 4.2 13.1 4.6v5.2H93.3v-5.2c6-.2 10.5-1.9 13.4-5.2 1.9-2.2 2.9-8.1 2.9-17.8V115c0-9.6-1.1-15.7-3.3-18.4-2.2-2.7-6.5-4.2-12.9-4.6v-5.4h56.9zm-20.4-65.9c6.3 0 11.6 2.2 16 6.6 4.4 4.4 6.5 9.7 6.5 15.9 0 6.2-2.2 11.5-6.6 15.9-4.4 4.4-9.7 6.5-15.9 6.5-6.2 0-11.5-2.2-15.9-6.5-4.4-4.4-6.5-9.7-6.5-15.9 0-6.2 2.2-11.5 6.5-15.9 4.4-4.4 9.7-6.6 15.9-6.6z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconInfo /> DOM element render correctly when no props are passed 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}"`;

exports[`<IconInfo /> styles responsively set misc styles on an icon 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d htz-e"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
     
    <path
      d="M150.3 86.6v107.8c0 9.6 1.1 15.7 3.3 18.4 2.2 2.7 6.6 4.2 13.1 4.6v5.2H93.3v-5.2c6-.2 10.5-1.9 13.4-5.2 1.9-2.2 2.9-8.1 2.9-17.8V115c0-9.6-1.1-15.7-3.3-18.4-2.2-2.7-6.5-4.2-12.9-4.6v-5.4h56.9zm-20.4-65.9c6.3 0 11.6 2.2 16 6.6 4.4 4.4 6.5 9.7 6.5 15.9 0 6.2-2.2 11.5-6.6 15.9-4.4 4.4-9.7 6.5-15.9 6.5-6.2 0-11.5-2.2-15.9-6.5-4.4-4.4-6.5-9.7-6.5-15.9 0-6.2 2.2-11.5 6.5-15.9 4.4-4.4 9.7-6.6 15.9-6.6z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconInfo /> styles responsively set misc styles on an icon 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}@media (max-width: 79.9375em){.htz-d{position:relative}}@media (min-width: 80em){.htz-e{position:static}}"`;

exports[`<IconInfo /> styles set icon's color 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
     
    <path
      d="M150.3 86.6v107.8c0 9.6 1.1 15.7 3.3 18.4 2.2 2.7 6.6 4.2 13.1 4.6v5.2H93.3v-5.2c6-.2 10.5-1.9 13.4-5.2 1.9-2.2 2.9-8.1 2.9-17.8V115c0-9.6-1.1-15.7-3.3-18.4-2.2-2.7-6.5-4.2-12.9-4.6v-5.4h56.9zm-20.4-65.9c6.3 0 11.6 2.2 16 6.6 4.4 4.4 6.5 9.7 6.5 15.9 0 6.2-2.2 11.5-6.6 15.9-4.4 4.4-9.7 6.5-15.9 6.5-6.2 0-11.5-2.2-15.9-6.5-4.4-4.4-6.5-9.7-6.5-15.9 0-6.2 2.2-11.5 6.5-15.9 4.4-4.4 9.7-6.6 15.9-6.6z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconInfo /> styles set icon's color 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:#0B7EB5}.htz-c{fill:#FFF}"`;

exports[`<IconInfo /> styles set icon's color responsively 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
     
    <path
      d="M150.3 86.6v107.8c0 9.6 1.1 15.7 3.3 18.4 2.2 2.7 6.6 4.2 13.1 4.6v5.2H93.3v-5.2c6-.2 10.5-1.9 13.4-5.2 1.9-2.2 2.9-8.1 2.9-17.8V115c0-9.6-1.1-15.7-3.3-18.4-2.2-2.7-6.5-4.2-12.9-4.6v-5.4h56.9zm-20.4-65.9c6.3 0 11.6 2.2 16 6.6 4.4 4.4 6.5 9.7 6.5 15.9 0 6.2-2.2 11.5-6.6 15.9-4.4 4.4-9.7 6.5-15.9 6.5-6.2 0-11.5-2.2-15.9-6.5-4.4-4.4-6.5-9.7-6.5-15.9 0-6.2 2.2-11.5 6.5-15.9 4.4-4.4 9.7-6.6 15.9-6.6z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconInfo /> styles set icon's color responsively 2`] = `".htz-a{vertical-align:-0.15em}.htz-d{fill:#FFF}@media (max-width: 79.9375em){.htz-b{color:#0B7EB5}}@media (min-width: 80em){.htz-c{color:#2D2D2D}}"`;

exports[`<IconInfo /> styles set icon's fill 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
     
    <path
      d="M150.3 86.6v107.8c0 9.6 1.1 15.7 3.3 18.4 2.2 2.7 6.6 4.2 13.1 4.6v5.2H93.3v-5.2c6-.2 10.5-1.9 13.4-5.2 1.9-2.2 2.9-8.1 2.9-17.8V115c0-9.6-1.1-15.7-3.3-18.4-2.2-2.7-6.5-4.2-12.9-4.6v-5.4h56.9zm-20.4-65.9c6.3 0 11.6 2.2 16 6.6 4.4 4.4 6.5 9.7 6.5 15.9 0 6.2-2.2 11.5-6.6 15.9-4.4 4.4-9.7 6.5-15.9 6.5-6.2 0-11.5-2.2-15.9-6.5-4.4-4.4-6.5-9.7-6.5-15.9 0-6.2 2.2-11.5 6.5-15.9 4.4-4.4 9.7-6.6 15.9-6.6z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconInfo /> styles set icon's fill 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#0B7EB5}"`;

exports[`<IconInfo /> styles set icon's fill responsively 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
     
    <path
      d="M150.3 86.6v107.8c0 9.6 1.1 15.7 3.3 18.4 2.2 2.7 6.6 4.2 13.1 4.6v5.2H93.3v-5.2c6-.2 10.5-1.9 13.4-5.2 1.9-2.2 2.9-8.1 2.9-17.8V115c0-9.6-1.1-15.7-3.3-18.4-2.2-2.7-6.5-4.2-12.9-4.6v-5.4h56.9zm-20.4-65.9c6.3 0 11.6 2.2 16 6.6 4.4 4.4 6.5 9.7 6.5 15.9 0 6.2-2.2 11.5-6.6 15.9-4.4 4.4-9.7 6.5-15.9 6.5-6.2 0-11.5-2.2-15.9-6.5-4.4-4.4-6.5-9.7-6.5-15.9 0-6.2 2.2-11.5 6.5-15.9 4.4-4.4 9.7-6.6 15.9-6.6z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconInfo /> styles set icon's fill responsively 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}@media (max-width: 79.9375em){.htz-c{fill:#0B7EB5}}@media (min-width: 80em){.htz-d{fill:#2D2D2D}}"`;

exports[`<IconInfo /> styles set icon's size 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
     
    <path
      d="M150.3 86.6v107.8c0 9.6 1.1 15.7 3.3 18.4 2.2 2.7 6.6 4.2 13.1 4.6v5.2H93.3v-5.2c6-.2 10.5-1.9 13.4-5.2 1.9-2.2 2.9-8.1 2.9-17.8V115c0-9.6-1.1-15.7-3.3-18.4-2.2-2.7-6.5-4.2-12.9-4.6v-5.4h56.9zm-20.4-65.9c6.3 0 11.6 2.2 16 6.6 4.4 4.4 6.5 9.7 6.5 15.9 0 6.2-2.2 11.5-6.6 15.9-4.4 4.4-9.7 6.5-15.9 6.5-6.2 0-11.5-2.2-15.9-6.5-4.4-4.4-6.5-9.7-6.5-15.9 0-6.2 2.2-11.5 6.5-15.9 4.4-4.4 9.7-6.6 15.9-6.6z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconInfo /> styles set icon's size 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}.htz-d{font-size:6rem}"`;

exports[`<IconInfo /> styles set icon's size responsively 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d htz-e"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
     
    <path
      d="M150.3 86.6v107.8c0 9.6 1.1 15.7 3.3 18.4 2.2 2.7 6.6 4.2 13.1 4.6v5.2H93.3v-5.2c6-.2 10.5-1.9 13.4-5.2 1.9-2.2 2.9-8.1 2.9-17.8V115c0-9.6-1.1-15.7-3.3-18.4-2.2-2.7-6.5-4.2-12.9-4.6v-5.4h56.9zm-20.4-65.9c6.3 0 11.6 2.2 16 6.6 4.4 4.4 6.5 9.7 6.5 15.9 0 6.2-2.2 11.5-6.6 15.9-4.4 4.4-9.7 6.5-15.9 6.5-6.2 0-11.5-2.2-15.9-6.5-4.4-4.4-6.5-9.7-6.5-15.9 0-6.2 2.2-11.5 6.5-15.9 4.4-4.4 9.7-6.6 15.9-6.6z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconInfo /> styles set icon's size responsively 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}@media (max-width: 79.9375em){.htz-d{font-size:6rem}}@media (min-width: 80em){.htz-e{font-size:7rem}}"`;

exports[`<IconInfo /> styles set misc styles on an icon 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
     
    <path
      d="M150.3 86.6v107.8c0 9.6 1.1 15.7 3.3 18.4 2.2 2.7 6.6 4.2 13.1 4.6v5.2H93.3v-5.2c6-.2 10.5-1.9 13.4-5.2 1.9-2.2 2.9-8.1 2.9-17.8V115c0-9.6-1.1-15.7-3.3-18.4-2.2-2.7-6.5-4.2-12.9-4.6v-5.4h56.9zm-20.4-65.9c6.3 0 11.6 2.2 16 6.6 4.4 4.4 6.5 9.7 6.5 15.9 0 6.2-2.2 11.5-6.6 15.9-4.4 4.4-9.7 6.5-15.9 6.5-6.2 0-11.5-2.2-15.9-6.5-4.4-4.4-6.5-9.7-6.5-15.9 0-6.2 2.2-11.5 6.5-15.9 4.4-4.4 9.7-6.6 15.9-6.6z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconInfo /> styles set misc styles on an icon 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}.htz-d{position:relative}"`;
